@@ -52,6 +52,7 @@ Rollergames TA-2 (LA-2C competition MOD based Tournament Edition)
 Rolling Stones V21 (unreleased so far, makes it the newest version available)
 Soccer Kings (alternate set 2)
 Super Mario Bros. (Spanish / Vifico license) (rev.1 and (most likely) rev.2)
+Surf 'n Safari (Tournament MOD)
 Transporter the Rescue L-3 (Fixed Jackpot MOD), LX-4 (Competition MOD in 2 variants: 'adult' and clean (one replaced word))
 Victory (tournament/competition MOD 1.1 & 1.2 & 1.3)
 
